fixed footer spacing

--- a/assests/stylesheet.css
+++ b/assests/stylesheet.css
@@ -75,7 +75,7 @@ footer {
     color: var(--smoke); 
     background-color: var(--my-teal);
     text-align: center;
-    line-height: 2.2rem;
+    line-height: 1.5rem;
 }
 
 /*Properties for nav links within header*/
